[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pointpats"
dynamic = ["version"]
authors = [
    { name = "Serge Rey", email = "sjsrey@gmail.com" },
    { name = "Hu Shao", email = "shaohutiger@gmail.com" },
]
maintainers = [{ name = "pysal contributors" }]
license = { text = "BSD 3-Clause" }
description = "Methods and Functions for planar point pattern analysis"
keywords = [
    "spatial statistics, point patterns"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.10"
dependencies = [
    "libpysal >=4.8",
    "geopandas >= 0.12",
    "matplotlib >=3.6",
    "numpy >=1.24",
    "pandas >=1.4, !=1.5.0",
    "scipy >=1.10",
    "shapely >=2"
]

[project.urls]
Home = "https://github.com/pysal/pointpats/"
Repository = "https://github.com/pysal/pointpats"

[project.optional-dependencies]
dev = ["pre-commit"]
docs = [
    "nbsphinx",
    "numpydoc",
    "pandoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
    "mkdocs-jupyter",
    "myst-parser"
]
tests = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-mpl",
    "pytest-cov",
    "scikit-learn >=1.2",
    "statsmodels",
    "watermark",
]

[tool.setuptools.packages.find]
include = ["pointpats", "pointpats.*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = [
    "B006",
    "B008",
    "B009",
    "B010",
    "C408",
    "E731",
    "F401",
    "F403",
    "N803",
    "N806",
    "N999",
    "UP007"
]
exclude = ["pointpats/tests/*", "docs/*"]

[tool.coverage.run]
source = ["./pointpats"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["pointpats/tests/*", "docs/conf.py"]
