[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "pointpats"
dynamic = ["version"]
authors = [
    { name = "Serge Rey", email = "sjsrey@gmail.com" },
    { name = "Hu Shao", email = "shaohutiger@gmail.com" },
]
maintainers = [{ name = "pysal contributors" }]
license = { text = "BSD 3-Clause" }
description = "Methods and Functions for planar point pattern analysis"
keywords = [
    "spatial statistics, point patterns"
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "libpysal >=4.12",
    "geopandas >= 1.1.0",
    "matplotlib >=3.10",
    "numpy >=2.0.0",
    "pandas >=2.3.0",
    "scipy >=1.14.0",
    "shapely >=2.1"
]

[project.urls]
Home = "https://github.com/pysal/pointpats/"
Repository = "https://github.com/pysal/pointpats"

[project.optional-dependencies]
plus = [
    "numba>=0.60",
    "scikit-learn>=1.5.0",
]
dev = [
    "pre-commit",
    "ruff",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "pandoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
    "mkdocs-jupyter",
    "myst-parser"
]
tests = [
    "codecov",
    "coverage",
    "folium",
    "mapclassify",
    "pytest",
    "pytest-mpl",
    "pytest-cov",
    "pytest-xdist",
    "statsmodels",
    "watermark",
]

[tool.setuptools.packages.find]
include = ["pointpats", "pointpats.*"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]

[tool.coverage.run]
source = ["./pointpats"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["pointpats/tests/*", "docs/conf.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:invalid value encountered in oriented_envelope:RuntimeWarning"  # macOS Apple Silicon issue
]
